--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>ZHP</title>
 </head>
 <body>
-    <a href="./HSW/index.html"></a>
+    <button>
+        <a href="./HSW/index.html"></a>
+    </button>
 </body>
 </html>
