--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <button>
-        <a href="./HSW/index.html"></a>
+        <a href="./HSW/index.html">Harcerski System Wychowawczy</a>
     </button>
 </body>
 </html>
