--- a/HSW/index.html
+++ b/HSW/index.html
@@ -10,15 +10,16 @@
 
 <header>
   <h1>Harcerski System Wychowawczy</h1>
-  <p>Dowiedz się więcej o zasadach, metodzie i programie harcerskim.</p>
 </header>
 
 <div class="container">
-  <!-- Podstawowe Składniki -->
   <div class="section" id="skladniki">
-    <h2>Podstawowe Składniki</h2>
+    <h2>Harcerski System Wychowawczy</h2>
     <div class="content">
-      <p>System obejmuje Zasady, Metodę i Program. Każdy z elementów wspiera rozwój harcerski poprzez działania i wartości.</p>
+      <p>System ten jest nieodłącznym elementem tradycji harcerskiej i dorobkiem tysięcy instruktorów. Stanowi jedność trzech elementów: zasad wychowania, metody harcerskiej oraz programu.</p>
+    </div>
+    <div class="content">
+      <p>Celem jest wszechstronny rozwój osobowy uczestników, a system działa efektywnie tylko wtedy, gdy zasady i metody są stosowane łącznie.</p>
     </div>
   </div>
 
