--- a/HSW/index.html
+++ b/HSW/index.html
@@ -16,7 +16,8 @@
         <section class="card" onclick="toggleSection(this)">
             <h2>Harcerski System Wychowawczy (HSW)</h2>
             <div class="content">
-                <p>Podstawowe elementy HSW to zasady, metoda oraz program. Tworzą one spójną podstawę rozwoju osobistego i społecznego w harcerstwie.</p>
+                <p>System ten jest nieodłącznym elementem tradycji harcerskiej i dorobkiem tysięcy instruktorów. Stanowi jedność trzech elementów: zasad wychowania, metody harcerskiej oraz programu.</p>
+                <p>Celem jest wszechstronny rozwój osobowy uczestników, a system działa efektywnie tylko wtedy, gdy zasady i metody są stosowane łącznie.</p>
             </div>
         </section>
 
@@ -25,10 +26,11 @@
             <h2>Zasady Harcerskie</h2>
             <div class="content">
                 <ul>
-                    <li><strong>Służba:</strong> Aktywne działanie na rzecz innych i świata.</li>
-                    <li><strong>Braterstwo:</strong> Wspólnotowość i wzajemny szacunek.</li>
-                    <li><strong>Samorealizacja:</strong> Rozwój własny przez naukę i doświadczenie.</li>
+                    <li><strong>Służba:</strong> postawa otwartości i aktywnej pomocy wobec innych oraz świata.</li>
+                    <li><strong>Braterstwo:</strong> tworzenie silnych więzi i wspólnoty w oparciu o współpracę i wzajemny szacunek.</li>
+                    <li><strong>Samorealizacja:</strong> ciągłe doskonalenie siebie i rozwijanie swojej osobowości.</li>
                 </ul>
+                <p>Zasady te realizowane są poprzez służbę Bogu i społeczeństwu, a także poprzez dążenie do prawdy i sprawiedliwości. Mają na celu rozwój odpowiedzialności społecznej oraz poszanowanie wartości, takich jak wolność, demokracja, i ochrona przyrody.</p>
             </div>
         </section>
 
@@ -36,7 +38,13 @@
         <section class="card" onclick="toggleSection(this)">
             <h2>Metoda Harcerska</h2>
             <div class="content">
-                <p>Metoda określa sposoby realizacji zasad wychowawczych, jak partnerstwo i indywidualna praca w grupie.</p>
+                <p>Metoda koncentruje się na pozytywnym wpływie na jednostkę w grupie, pozwalając jej odkrywać i rozwijać swoje zalety. Opiera się na partnerstwie między wychowankami i instruktorami – wychowawca pełni rolę „starszego brata” i wzorca, którego autorytet wynika z postawy i doświadczenia.</p>
+                <ul>
+                    <li><strong>Dobrowolność i świadome zaangażowanie:</strong> uczestnicy sami decydują o przynależności.</li>
+                    <li><strong>Naturalność działań:</strong> program dostosowuje się do specyfiki zespołu i warunków lokalnych.</li>
+                    <li><strong>Oddziaływanie pośrednie:</strong> poprzez proponowanie zadań atrakcyjnych, pożytecznych społecznie i rozwijających wewnętrznie.</li>
+                    <li><strong>System zastępowy:</strong> małe grupy stanowią podstawowe środowisko wychowawcze.</li>
+                </ul>
             </div>
         </section>
 
@@ -44,7 +52,7 @@
         <section class="card" onclick="toggleSection(this)">
             <h2>Program Harcerski</h2>
             <div class="content">
-                <p>Program dostosowany jest do potrzeb członków drużyn, odpowiadając na lokalne wyzwania i potrzeby.</p>
+                <p>Program powstaje na poziomie drużyn i jest dostosowany do potrzeb oraz możliwości członków. Składa się z zadań, metodyki oraz rozwiązań organizacyjnych. Odpowiada na społeczne wyzwania, które harcerstwo podejmuje na poziomie wspólnotowym (szczepy, hufce, chorągwie).</p>
             </div>
         </section>
 
@@ -53,10 +61,51 @@
             <h2>Grupy Wiekowe i Metodyka</h2>
             <div class="content">
                 <ul>
-                    <li><strong>Zuchy:</strong> Zabawa jako metoda rozwoju.</li>
-                    <li><strong>Harcerze młodsi:</strong> Współzawodnictwo w grach.</li>
-                    <li><strong>Harcerze starsi:</strong> Wędrownictwo i samodzielne poznawanie świata.</li>
+                    <li><strong>Zuchy:</strong> (7-10 lat) Zabawa jako główna metoda pracy, zuchy zdobywają gwiazdki i sprawności zuchowe.</li>
+                    <li><strong>Harcerze młodsi:</strong> (11-15 lat) Gry i współzawodnictwo, praca w drużynach i zastępach.</li>
+                    <li><strong>Harcerze starsi:</strong> Wędrownictwo jako metoda samodzielnego poznawania świata i kształtowania postaw.</li>
+                    <li><strong>Instruktorzy:</strong> Samowychowanie oparte na przyjaźni i wartościach, wspierane w kręgach instruktorskich.</li>
                 </ul>
+            </div>
+        </section>
+
+        <!-- Sekcja Stopnie i sprawności -->
+        <section class="card" onclick="toggleSection(this)">
+            <h2>Stopnie i sprawności</h2>
+            <div class="content">
+                <p>Funkcjonuje wiele systemów stopni, pod warunkiem ich zgodności ze Statutem ZHP. Rada Naczelna planuje opracowanie jednolitego systemu stopni oraz poradnika sprawności.</p>
+            </div>
+        </section>
+
+        <!-- Sekcja Znaki służb -->
+        <section class="card" onclick="toggleSection(this)">
+            <h2>Znaki służb</h2>
+            <div class="content">
+                <p>System ośmiu znaków służb motywuje do działań społecznie pożytecznych i kształcących postawy harcerskie. Planowane jest wydanie poradnika promującego zdobywanie znaków służb.</p>
+            </div>
+        </section>
+
+        <!-- Sekcja Organizacja drużyn -->
+        <section class="card" onclick="toggleSection(this)">
+            <h2>Organizacja drużyn</h2>
+            <div class="content">
+                <p>Drużynowy lub komendant zarządza drużyną z pomocą przybocznych. Drużyny mogą tworzyć dokumenty regulujące ich działalność oraz prowadzić dokumentację programową i finansową.</p>
+            </div>
+        </section>
+
+        <!-- Sekcja Koedukacja -->
+        <section class="card" onclick="toggleSection(this)">
+            <h2>Koedukacja</h2>
+            <div class="content">
+                <p>Rada Naczelna zaleca koedukację w zespołach starszoharcerskich. W młodszych pionach preferuje się oddzielne drużyny dziewcząt i chłopców.</p>
+            </div>
+        </section>
+
+        <!-- Sekcja Wsparcie programowo-metodyczne -->
+        <section class="card" onclick="toggleSection(this)">
+            <h2>Wsparcie programowo-metodyczne</h2>
+            <div class="content">
+                <p>Organizacja centralna i regionalna wspiera drużyny poprzez kursy, publikacje oraz promocję programowych rozwiązań.</p>
             </div>
         </section>
     </main>
