--- a/HSW/index.html
+++ b/HSW/index.html
@@ -12,7 +12,6 @@
         <p>Interaktywna mapa myśli z głównymi informacjami o HSW</p>
     </header>
     <main>
-        <!-- Sekcja HSW -->
         <section class="card" onclick="toggleSection(this)">
             <h2>Harcerski System Wychowawczy (HSW)</h2>
             <div class="content">
@@ -20,35 +19,31 @@
                 <p>Celem jest wszechstronny rozwój osobowy uczestników, a system działa efektywnie tylko wtedy, gdy zasady i metody są stosowane łącznie.</p>
             </div>
         </section>
-
-        <!-- Sekcja Zasady -->
         <section class="card" onclick="toggleSection(this)">
-            <h2>Zasady Harcerskie</h2>
+            <h2>Podział na grupy</h2>
             <div class="content">
                 <ul>
-                    <li><strong>Służba:</strong> postawa otwartości i aktywnej pomocy wobec innych oraz świata.</li>
-                    <li><strong>Braterstwo:</strong> tworzenie silnych więzi i wspólnoty w oparciu o współpracę i wzajemny szacunek.</li>
-                    <li><strong>Samorealizacja:</strong> ciągłe doskonalenie siebie i rozwijanie swojej osobowości.</li>
-                </ul>
-                <p>Zasady te realizowane są poprzez służbę Bogu i społeczeństwu, a także poprzez dążenie do prawdy i sprawiedliwości. Mają na celu rozwój odpowiedzialności społecznej oraz poszanowanie wartości, takich jak wolność, demokracja, i ochrona przyrody.</p>
-            </div>
-        </section>
-
-        <!-- Sekcja Metoda -->
-        <section class="card" onclick="toggleSection(this)">
-            <h2>Metoda Harcerska</h2>
-            <div class="content">
-                <p>Metoda koncentruje się na pozytywnym wpływie na jednostkę w grupie, pozwalając jej odkrywać i rozwijać swoje zalety. Opiera się na partnerstwie między wychowankami i instruktorami – wychowawca pełni rolę „starszego brata” i wzorca, którego autorytet wynika z postawy i doświadczenia.</p>
-                <ul>
-                    <li><strong>Dobrowolność i świadome zaangażowanie:</strong> uczestnicy sami decydują o przynależności.</li>
-                    <li><strong>Naturalność działań:</strong> program dostosowuje się do specyfiki zespołu i warunków lokalnych.</li>
-                    <li><strong>Oddziaływanie pośrednie:</strong> poprzez proponowanie zadań atrakcyjnych, pożytecznych społecznie i rozwijających wewnętrznie.</li>
-                    <li><strong>System zastępowy:</strong> małe grupy stanowią podstawowe środowisko wychowawcze.</li>
+                    <li><strong>Zuchy:</strong> 7 - 10 lat</li>
+                    <li><strong>Harcerze:</strong> 10 - 13 lat</li>
+                    <li><strong>Harcerze starsi:</strong> 13 - 16 lat</li>
+                    <li><strong>Wędrownicy:</strong> 15 - 21 lat</li>
+                    <li><strong>Instruktorzy:</strong> 21+</li>
+                    <li><strong>Starszyzna harcerska:</strong> 21+</li>
                 </ul>
             </div>
         </section>
-
-        <!-- Sekcja Program -->
+        <section class="card" onclick="toggleSection(this)">
+            <h2>Wyzwania</h2>
+            <div class="content">
+                <p>Oznaczeniem jest symbol pióra na mundurze</p>
+                <p>Cele</p>
+                <ul>
+                    <li>Przekonanie wychowanków, że powinni pracować nad sobą</li>
+                    <li>Uświadomienie, że dzięki sile woli można zmienić się na leprze</li>
+                    <li>Sprzyja budowaniu poczucia własnej wartości.</li>
+                </ul>
+            </div>
+        </section>
         <section class="card" onclick="toggleSection(this)">
             <h2>Program Harcerski</h2>
             <div class="content">
