--- a/HSW/index.html
+++ b/HSW/index.html
@@ -20,6 +20,12 @@
             </div>
         </section>
         <section class="card" onclick="toggleSection(this)">
+            <h2>Program</h2>
+            <div class="content">
+                <p>Dostosowany do lokalnych potrzeb i zasobów, składa się z zadań, metod realizacji i rozwiązań organizacyjnych. Wyróżnia się różne metodyki dla zuchów, harcerzy, harcerzy starszych, wędrowników i instruktorów.</p>
+            </div>
+        </section>
+        <section class="card" onclick="toggleSection(this)">
             <h2>Podział na grupy</h2>
             <div class="content">
                 <ul>
@@ -45,62 +51,21 @@
             </div>
         </section>
         <section class="card" onclick="toggleSection(this)">
-            <h2>Program Harcerski</h2>
+            <h2>Tropy</h2>
             <div class="content">
-                <p>Program powstaje na poziomie drużyn i jest dostosowany do potrzeb oraz możliwości członków. Składa się z zadań, metodyki oraz rozwiązań organizacyjnych. Odpowiada na społeczne wyzwania, które harcerstwo podejmuje na poziomie wspólnotowym (szczepy, hufce, chorągwie).</p>
-            </div>
-        </section>
-
-        <!-- Sekcja Grupy Wiekowe -->
-        <section class="card" onclick="toggleSection(this)">
-            <h2>Grupy Wiekowe i Metodyka</h2>
-            <div class="content">
+                <p>Zdobywanie tropu koordynuje:</p>
                 <ul>
-                    <li><strong>Zuchy:</strong> (7-10 lat) Zabawa jako główna metoda pracy, zuchy zdobywają gwiazdki i sprawności zuchowe.</li>
-                    <li><strong>Harcerze młodsi:</strong> (11-15 lat) Gry i współzawodnictwo, praca w drużynach i zastępach.</li>
-                    <li><strong>Harcerze starsi:</strong> Wędrownictwo jako metoda samodzielnego poznawania świata i kształtowania postaw.</li>
-                    <li><strong>Instruktorzy:</strong> Samowychowanie oparte na przyjaźni i wartościach, wspierane w kręgach instruktorskich.</li>
+                    <li>Z: drużynowy i przyboczni</li>
+                    <li>H: zastępowy</li>
+                    <li>HS: zastępowy lub osoba przez niego wskazana</li>
+                    <li>W: wybrany członek patrolu/zastępu</li>
                 </ul>
-            </div>
-        </section>
-
-        <!-- Sekcja Stopnie i sprawności -->
-        <section class="card" onclick="toggleSection(this)">
-            <h2>Stopnie i sprawności</h2>
-            <div class="content">
-                <p>Funkcjonuje wiele systemów stopni, pod warunkiem ich zgodności ze Statutem ZHP. Rada Naczelna planuje opracowanie jednolitego systemu stopni oraz poradnika sprawności.</p>
-            </div>
-        </section>
-
-        <!-- Sekcja Znaki służb -->
-        <section class="card" onclick="toggleSection(this)">
-            <h2>Znaki służb</h2>
-            <div class="content">
-                <p>System ośmiu znaków służb motywuje do działań społecznie pożytecznych i kształcących postawy harcerskie. Planowane jest wydanie poradnika promującego zdobywanie znaków służb.</p>
-            </div>
-        </section>
-
-        <!-- Sekcja Organizacja drużyn -->
-        <section class="card" onclick="toggleSection(this)">
-            <h2>Organizacja drużyn</h2>
-            <div class="content">
-                <p>Drużynowy lub komendant zarządza drużyną z pomocą przybocznych. Drużyny mogą tworzyć dokumenty regulujące ich działalność oraz prowadzić dokumentację programową i finansową.</p>
-            </div>
-        </section>
-
-        <!-- Sekcja Koedukacja -->
-        <section class="card" onclick="toggleSection(this)">
-            <h2>Koedukacja</h2>
-            <div class="content">
-                <p>Rada Naczelna zaleca koedukację w zespołach starszoharcerskich. W młodszych pionach preferuje się oddzielne drużyny dziewcząt i chłopców.</p>
-            </div>
-        </section>
-
-        <!-- Sekcja Wsparcie programowo-metodyczne -->
-        <section class="card" onclick="toggleSection(this)">
-            <h2>Wsparcie programowo-metodyczne</h2>
-            <div class="content">
-                <p>Organizacja centralna i regionalna wspiera drużyny poprzez kursy, publikacje oraz promocję programowych rozwiązań.</p>
+                <p>Cele</p>
+                <ul>
+                    <li>Rozwój umiejętności budowy wspólnoty</li>
+                    <li>Rozwój kompetencji interpersonalnych i umiejętności pracy w grupie</li>
+                    <li>Inicjowanie i wzmocnieni elementów metody harcerskiej</li>
+                </ul>
             </div>
         </section>
     </main>
