--- a/HSW/index.html
+++ b/HSW/index.html
@@ -13,6 +13,12 @@
     </header>
     <main>
         <section class="card" onclick="toggleSection(this)">
+            <h2>Misja ZHP</h2>
+            <div class="content">
+                <p>Misją ZHP jest wychowywanie młodego człowieka, czyli wspieranie go we wszechstronnym rozwoju i kształtowaniu charakteru przez stawianie wyzwań.</p>
+            </div>
+        </section>
+        <section class="card" onclick="toggleSection(this)">
             <h2>Harcerski System Wychowawczy (HSW)</h2>
             <div class="content">
                 <p>System ten jest nieodłącznym elementem tradycji harcerskiej i dorobkiem tysięcy instruktorów. Stanowi jedność trzech elementów: zasad wychowania, metody harcerskiej oraz programu.</p>
@@ -23,6 +29,18 @@
             <h2>Program</h2>
             <div class="content">
                 <p>Dostosowany do lokalnych potrzeb i zasobów, składa się z zadań, metod realizacji i rozwiązań organizacyjnych. Wyróżnia się różne metodyki dla zuchów, harcerzy, harcerzy starszych, wędrowników i instruktorów.</p>
+            </div>
+        </section>
+        <section class="card" onclick="toggleSection(this)">
+            <h2>Zasady</h2>
+            <div class="content">
+                <p>Uznawane za drogowskaz obejmują służbę, braterstwo i samorealizację. Kładą nacisk na wartości społeczne, takie jak wolność, prawda i sprawiedliwość.</p>
+            </div>
+        </section>
+        <section class="card" onclick="toggleSection(this)">
+            <h2>Metoda</h2>
+            <div class="content">
+                <p>Opiera się na pracy z jednostką w grupie, partnerstwie między wychowankami a instruktorami oraz dobrowolnym zaangażowaniu.</p>
             </div>
         </section>
         <section class="card" onclick="toggleSection(this)">
