--- a/HSW/index.html
+++ b/HSW/index.html
@@ -44,6 +44,18 @@
             </div>
         </section>
         <section class="card" onclick="toggleSection(this)">
+            <h2>Inicjatywy</h2>
+            <div class="content">
+                <p>Rada Naczelna planuje powołać zespoły ds. metodyki i regulacji systemów stopni, mające na celu dalszy rozwój systemu wychowawczego w ZHP.</p>
+            </div>
+        </section>
+        <section class="card" onclick="toggleSection(this)">
+            <h2>Organizacja drużyn</h2>
+            <div class="content">
+                <p>Drużynowy (lub komendant) odpowiada za kierowanie drużyną. Jednostka musi prowadzić dokumentację programową oraz finansową.</p>
+            </div>
+        </section>
+        <section class="card" onclick="toggleSection(this)">
             <h2>Podział na grupy</h2>
             <div class="content">
                 <ul>
@@ -53,6 +65,33 @@
                     <li><strong>Wędrownicy:</strong> 15 - 21 lat</li>
                     <li><strong>Instruktorzy:</strong> 21+</li>
                     <li><strong>Starszyzna harcerska:</strong> 21+</li>
+                </ul>
+            </div>
+        </section>
+        <section class="card" onclick="toggleSection(this)">
+            <h2>Naramienniki</h2>
+            <div class="content">
+                <p>Naramiennik Starszoharcerski</p>
+                <ul>
+                    <li>Instrument nieobowiązkowy</li>
+                    <li>Brak opiekuna</li>
+                    <li>Czas trwania: do 3 miesięcy</li>
+                    <li>Oznaczenie działania w zastępie starszoharcerskim</li>
+                </ul>
+                <p>Naramiennik Wędrowniczy:</p>
+                <ul>
+                    <li>Dodatkowe zadanie oparte na kodeksie wędrowniczym</li>
+                    <li>
+                        <p>Opiekun próby</p>
+                        <ul>
+                            <li>Posiada naramiennik</li>
+                            <li>Wspiera w realizacji</li>
+                            <li>Odpowiada za ewaluację</li>
+                            <li>Wręcza naramiennik</li>
+                        </ul>
+                    </li>
+                    <li>Czas trwania: do 6 miesięcy</li>
+                    <li>Oznaczenie działania w zespole wędrowniczym</li>
                 </ul>
             </div>
         </section>
