--- a/HSW/index.html
+++ b/HSW/index.html
@@ -71,24 +71,24 @@
         <section class="card" onclick="toggleSection(this)">
             <h2>Naramienniki</h2>
             <div class="content">
-                <p>Naramiennik Starszoharcerski</p>
+                <p>Naramiennik Starszoharcerski:</p>
                 <ul>
                     <li>Instrument nieobowiązkowy</li>
                     <li>Brak opiekuna</li>
                     <li>Czas trwania: do 3 miesięcy</li>
                     <li>Oznaczenie działania w zastępie starszoharcerskim</li>
-                </ul>
+                </ul><br>
                 <p>Naramiennik Wędrowniczy:</p>
                 <ul>
                     <li>Dodatkowe zadanie oparte na kodeksie wędrowniczym</li>
                     <li>
-                        <p>Opiekun próby</p>
-                        <ul>
+                        <p>Opiekun próby:</p>
+                        <ol>
                             <li>Posiada naramiennik</li>
                             <li>Wspiera w realizacji</li>
                             <li>Odpowiada za ewaluację</li>
                             <li>Wręcza naramiennik</li>
-                        </ul>
+                        </ol>
                     </li>
                     <li>Czas trwania: do 6 miesięcy</li>
                     <li>Oznaczenie działania w zespole wędrowniczym</li>
