--- a/HSW/index.html
+++ b/HSW/index.html
@@ -125,6 +125,44 @@
                 </ul>
             </div>
         </section>
+        <section class="card" onclick="toggleSection(this)">
+            <h2>Próba Harcerza</h2>
+            <div class="content">
+                <p>Samodzielna realizacja</p>
+                <p>Realizowana bezpośredni po dołączeniu do ZHP</p>
+                <p>Zawiera wymagania do każdej z metodyk</p>
+                <p>Max. czas: 6 miesięcy</p>
+                <p>Cele</p>
+                <ul>
+                    <li>Poznanie harcerskich ideałów</li>
+                    <li>Poznanie zasad i zwyczajów drużyny i hacerstwa</li>
+                    <li>Poznanie wiadomości o ZHP</li>
+                </ul>
+            </div>
+        </section>
+        <section class="card" onclick="toggleSection(this)">
+            <h2>Gwiazdki zuchowe</h2>
+            <div class="content">
+                <p>Cel: stymulowanie wszechstronnego i równomiernego rozwoju kandydata we wszystkich sferach uwzględnionych w HSW</p>
+                <p>Nie stosuje się instytucji opiekuna, kluczową rolę pełnią rodzice</p>
+                <p>Rodzaje gwiazdek zuchowych:</p>
+                <ul>
+                    <li>Zuch ochoczy (6 - 8 lat)</li>
+                    <li>Zuch sprawny (8 - 9 lat)</li>
+                    <li>Zuch zaradny (9 - 10 lat)</li>
+                </ul>
+                <p>Cykl zdobywania gwiazdki:</p>
+                <ol>
+                    <li>Otwarcie próby</li>
+                    <li>Planowanie próby</li>
+                    <li>Realizacja zadań</li>
+                    <li>Weryfikacja</li>
+                    <li>Zamknięcie</li>
+                    <li>Obrzędowe przyznanie</li>
+                    <li>Otwarcie kolejnej próby na stopień</li>
+                </ol>
+            </div>
+        </section>
     </main>
     <script src="script.js"></script>
 </body>
