--- a/HSW/index.html
+++ b/HSW/index.html
@@ -71,7 +71,7 @@
             <section class="card" onclick="toggleSection(this)">
                 <h2>Naramienniki</h2>
                 <div class="content">
-                    <p>Naramiennik Starszoharcerski:</p>
+                    <p><b>Naramiennik Starszoharcerski:</b></p>
                     <ul>
                         <li>Instrument nieobowiązkowy</li>
                         <li>Brak opiekuna</li>
