--- a/HSW/index.html
+++ b/HSW/index.html
@@ -78,7 +78,7 @@
                         <li>Czas trwania: do 3 miesięcy</li>
                         <li>Oznaczenie działania w zastępie starszoharcerskim</li>
                     </ul><br>
-                    <p>Naramiennik Wędrowniczy:</p>
+                    <p><strong>Naramiennik Wędrowniczy:</strong></p>
                     <ul>
                         <li>Dodatkowe zadanie oparte na kodeksie wędrowniczym</li>
                         <li>
