--- a/HSW/index.html
+++ b/HSW/index.html
@@ -78,11 +78,11 @@
                         <li>Czas trwania: do 3 miesięcy</li>
                         <li>Oznaczenie działania w zastępie starszoharcerskim</li>
                     </ul><br>
-                    <p><strong>Naramiennik Wędrowniczy:</strong></p>
+                    <p><b>Naramiennik Wędrowniczy:</b></p>
                     <ul>
                         <li>Dodatkowe zadanie oparte na kodeksie wędrowniczym</li>
                         <li>
-                            <p>Opiekun próby:</p>
+                            <p><b>Opiekun próby:</b></p>
                             <ol>
                                 <li>Posiada naramiennik</li>
                                 <li>Wspiera w realizacji</li>
@@ -98,8 +98,8 @@
             <section class="card" onclick="toggleSection(this)">
                 <h2>Wyzwania</h2>
                 <div class="content">
-                    <p>Oznaczeniem jest symbol pióra na mundurze</p>
-                    <p>Cele</p>
+                    <p>Oznaczeniem jest symbol pióra na mundurze</p><br>
+                    <p><b>Cele:</b></p>
                     <ul>
                         <li>Przekonanie wychowanków, że powinni pracować nad sobą</li>
                         <li>Uświadomienie, że dzięki sile woli można zmienić się na leprze</li>
@@ -110,14 +110,14 @@
             <section class="card" onclick="toggleSection(this)">
                 <h2>Tropy</h2>
                 <div class="content">
-                    <p>Zdobywanie tropu koordynuje:</p>
+                    <p><b>Zdobywanie tropu koordynuje:</b></p>
                     <ul>
                         <li>Z: drużynowy i przyboczni</li>
                         <li>H: zastępowy</li>
                         <li>HS: zastępowy lub osoba przez niego wskazana</li>
                         <li>W: wybrany członek patrolu/zastępu</li>
-                    </ul>
-                    <p>Cele</p>
+                    </ul><br>
+                    <p><b>Cele:</b></p>
                     <ul>
                         <li>Rozwój umiejętności budowy wspólnoty</li>
                         <li>Rozwój kompetencji interpersonalnych i umiejętności pracy w grupie</li>
@@ -132,7 +132,7 @@
                     <p>Realizowana bezpośredni po dołączeniu do ZHP</p>
                     <p>Zawiera wymagania do każdej z metodyk</p>
                     <p>Max. czas: 6 miesięcy</p>
-                    <p>Cele</p>
+                    <p><b>Cele:</b></p>
                     <ul>
                         <li>Poznanie harcerskich ideałów</li>
                         <li>Poznanie zasad i zwyczajów drużyny i hacerstwa</li>
@@ -144,14 +144,14 @@
                 <h2>Gwiazdki zuchowe</h2>
                 <div class="content">
                     <p>Cel: stymulowanie wszechstronnego i równomiernego rozwoju kandydata we wszystkich sferach uwzględnionych w HSW</p>
-                    <p>Nie stosuje się instytucji opiekuna, kluczową rolę pełnią rodzice</p>
-                    <p>Rodzaje gwiazdek zuchowych:</p>
+                    <p>Nie stosuje się instytucji opiekuna, kluczową rolę pełnią rodzice</p><br>
+                    <p><b>Rodzaje gwiazdek zuchowych:</b></p>
                     <ul>
                         <li>Zuch ochoczy (6 - 8 lat)</li>
                         <li>Zuch sprawny (8 - 9 lat)</li>
                         <li>Zuch zaradny (9 - 10 lat)</li>
-                    </ul>
-                    <p>Cykl zdobywania gwiazdki:</p>
+                    </ul><br>
+                    <p><b>Cykl zdobywania gwiazdki:</b></p>
                     <ol>
                         <li>Otwarcie próby</li>
                         <li>Planowanie próby</li>
@@ -166,8 +166,8 @@
             <section class="card" onclick="toggleSection(this)">
                 <h2>Stopnie</h2>
                 <div class="content">
-                    <p>Cel: stymulowanie wszechstronnego i równomiernego rozwoju kandydata we wszystkich sferach uwzględnionych w HSW</p>
-                    <p>Rodzaje stopni</p>
+                    <p>Cel: stymulowanie wszechstronnego i równomiernego rozwoju kandydata we wszystkich sferach uwzględnionych w HSW</p><br>
+                    <p><b>Rodzaje stopni</b></p>
                     <ol>
                         <li>Ochotniczka / Młodzik (10 - 12 lat)</li>
                         <li>Tropicielka / Wywiadowca (12 -13 lat)</li>
@@ -175,14 +175,14 @@
                         <li>Samarytanka / Ćwik (14 - 16 lat)</li>
                         <li>Harcerka Orla / Harcerz Orli (15 - 19 lat)</li>
                         <li>Harcerka Rzeczypospolitej / Harcerz Rrzeczypospolitej ( 18 - 21 lat)</li>
-                    </ol>
-                    <p>Opiekun:</p>
+                    </ol><br>
+                    <p><b>Opiekun:</b></p>
                     <uL>
                         <li>Wspiera kandydata</li>
                         <li>Ewaluuje przebieg próby wspólnie z kandydatem</li>
                         <li>Wspólnie z kandydatem określa kształt próby w oparciu o ideę stopnia</li>
-                    </uL>
-                    <p>Cykl zdobywania stopnia:</p>
+                    </uL><br>
+                    <p><b>Cykl zdobywania stopnia:</b></p>
                     <ol>
                         <li>Planowanie próby</li>
                         <li>Otwarcie próby</li>
@@ -198,13 +198,13 @@
             <section class="card" onclick="toggleSection(this)">
                 <h2>Sprawności</h2>
                 <div class="content">
-                    <p>Cele:</p>
+                    <p><b>Cele:</b></p>
                     <ul>
                         <li>Rozwijanie umiejętności</li>
                         <li>Rozwijanie wiedzy i kształtowanie wyrobienia harcerskiego</li>
                         <li>Stymulowanie rozwoju fizycznego i intelektualnego</li>
-                    </ul>
-                    <p>Cykl zdobywania sprawności:</p>
+                    </ul><br>
+                    <p><b>Cykl zdobywania sprawności:</b></p>
                     <ol>
                         <li>Wybór obszaru rozwoju</li>
                         <li>Deklaracja kandydata - oszacowanie czasu</li>
